# Advance_RAG

./: .env.example  .env.vector.example  .gitignore  .pre-commit-config.yaml  Dockerfile  PROJECT_VALIDATION_REPORT.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  test_rye_setup.py
config/: nginx.conf  prometheus.yml
data/dummy/: STUDY001_ADLB.json  STUDY001_ADSL.json  STUDY001_AE.json  STUDY001_DM.csv  STUDY001_DM.json  STUDY001_LB.csv  STUDY001_LB.json  STUDY001_Protocol.md  STUDY001_SAP.md  STUDY001_VS.json  STUDY002_ADLB.json  STUDY002_ADSL.json  STUDY002_AE.json  STUDY002_DM.csv  STUDY002_DM.json  STUDY002_LB.csv  STUDY002_LB.json  STUDY002_Protocol.md  STUDY002_SAP.md  STUDY002_VS.json  STUDY003_ADLB.json  STUDY003_ADSL.json  STUDY003_AE.json  STUDY003_DM.csv  STUDY003_DM.json  STUDY003_LB.csv  STUDY003_LB.json  STUDY003_Protocol.md  STUDY003_SAP.md  STUDY003_VS.json  TEST001_ADLB.json  TEST001_ADSL.json  TEST001_DM.csv  TEST001_DM.json  TEST001_LB.csv  TEST001_LB.json  TEST001_Protocol.md  TEST001_SAP.md  TEST001_VS.json
docs/architecture/: README.md  deployment_guide.md  hld.md  lld.md  retrieval_refactoring.md  summary.md  tech_stack.md  vector_store_migration.md
docs/architecture/diagrams/: system_architecture.md
migrations/: env.py  script.py.mako
scripts/: generate_dummy_data.py  ingest_data.py  init_neo4j.py  init_postgres.sql
src/advance_rag/: __init__.py  cli.py
src/advance_rag/api/: dependencies.py  main.py  service_registry.py
src/advance_rag/core/: auth.py  celery.py  config.py  exceptions.py  logging.py  middleware.py  tracing.py  vector_config.py
src/advance_rag/db/: __init__.py
src/advance_rag/embedding/: service.py
src/advance_rag/graph/: advanced_graphrag.py  graphrag.py  graphrag_old.py  neo4j_service.py
tests/: test_rag_system.py
(+25 files in other folders)
